<resources>
    <string name="app_name">Vaccine Passport</string>
    <!-- Preference Titles -->
    <string name="security_header">Security</string>
    <string name="modes_header">Modes</string>

    <!-- Modes headings -->
    <string name="pref_border_mode_title">Border mode</string>
    <string name="pref_border_mode_desc">Makes UI for scanning vaccine passports more streamlined</string>
    <string name="pref_logging_title">Scan logging</string>
    <string name="pref_logging_desc">Save scanned vaccine passports with approved/rejected status</string>

    <!-- Security headings -->
    <string name="pref_pin_set_title">Set app PIN</string>
    <string name="pref_pin_use_title">Require PIN to open app</string>
    <string name="pref_fingerprint_title">Allow unlocking with fingerprint</string>
    <string name="pref_fingerprint_desc">For devices with a fingerprint sensor</string>

    <string name="pref_notifications_title">Allow Notifications</string>
    <string name="pref_notifications_desc">Allow the Vaccine Passport app to notify you when the follow up dose of your vaccine is due</string>
    <string name="notifications_header">Notifications</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_passports">Your Vaccines</string>
    <string name="menu_scan_now">Scan Barcode</string>
    <string name="shortcut_latest">Display latest Vaccine</string>
    <string name="unable_to_scan">Scanning is not available at this time</string>
    <string name="no_pass_shortcut">No vaccine passports to display</string>

    <string name="scanner_actionbar_title">Scanning</string>
    <string name="scanner_actionbar_subtitle">Looking for a barcode</string>

    <string name="why_camera_permission">This app needs access to your camera in order to scan and recognise barcodes.
        Barcodes are used for exchanging vaccine passports so this app cannot work without the camera.
        You will be prompted to accept camera permissions in order to use the scan feature.</string>
    <string name="why_camera_permission_acknowledge">Ok</string>

    <string name="scan">Scan</string>
    <string name="showing_scan_result_title">Viewing VaccPass Info</string>
    <string name="showing_vaccine_passports">Your Vaccine Passports</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="close">Close</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>

    <string name="vpass_vaccine_info">Vaccine Info</string>
    <string name="vpass_passport_info">Passport Info</string>
    <string name="vpass_person_info">Personal Details</string>
    <string name="vpass_vaccine_type">Vaccine type</string>
    <string name="vpass_vaccine_date">Vaccination date</string>
    <string name="vpass_vaccine_dose">Dosage number</string>
    <string name="vpass_vaccine_giver">Administered by</string>
    <string name="vpass_vaccine_country">Administered in</string>
    <string name="vpass_passport_passportno">Passport number</string>
    <string name="vpass_passport_passportexpiry">Passport expiry date</string>
    <string name="vpass_person_name">Full name</string>
    <string name="vpass_person_dob">Date of birth</string>
    <string name="vpass_approval_status">Approval status</string>
    <string name="vpass_approved">Approved</string>
    <string name="vpass_rejected">Rejected</string>

    <string name="vaccine_deleted">Vaccine deleted</string>
    <string name="deletion_canceled">Deletion canceled</string>

    <string name="nfc_nonexistent">NFC Unsupported on this device</string>
    <string name="nfc_disabled">NFC is disabled in your device settings</string>
    <string name="nfc_ready">Touch phone against ePassport to validate</string>
    <string name="nfc_reading">Reading ePassport</string>
    <string name="nfc_success">Success! Read passport with name:\n%NAME%</string>
    <string name="nfc_error">Passport scanning unsuccessful:\n%REASON%</string>
    <string name="nfc_taglost_error">Did not finish reading passport. Try again.</string>

    <string name="lock_button_1">1</string>
    <string name="lock_button_2">2</string>
    <string name="lock_button_3">3</string>
    <string name="lock_button_4">4</string>
    <string name="lock_button_5">5</string>
    <string name="lock_button_6">6</string>
    <string name="lock_button_7">7</string>
    <string name="lock_button_8">8</string>
    <string name="lock_button_9">9</string>
    <string name="lock_button_0">0</string>
    <string name="lock_button_finger">biometric unlock</string>
    <string name="lock_button_delete">delete</string>
    <string name="lock_button_confirm">Confirm Pin</string>
    <string name="bad_pin_msg">Incorrect Pin</string>

    <string name="reminder_channel_description">Send Vaccine Reminder</string>
    <string name="reminder_name">Vaccine Due</string>
    <string name="reminder_message">Your next COVID-19 vaccine is due.</string>

    <string name="delete">Delete</string>
    <string name="confirm_delete_msg">Are you sure you want to delete this VPass?</string>
</resources>