<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/security_header">
        <Preference
            android:key="set_pin"
            android:title="@string/pref_pin_set_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="use_pin"
            android:title="@string/pref_pin_use_title" />
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="use_fingerprint"
            android:title="@string/pref_fingerprint_title"
            app:summary="@string/pref_fingerprint_desc" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/modes_header">
        <SwitchPreference
            android:defaultValue="false"
            android:key="border_mode"
            android:summary="@string/pref_border_mode_desc"
            android:title="@string/pref_border_mode_title" />
        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="logging_mode"
            android:summary="@string/pref_logging_desc"
            android:title="@string/pref_logging_title" />
    </PreferenceCategory>

</PreferenceScreen>