<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="scan"
        android:enabled="true"
        android:icon="@drawable/icon_scan_now"
        android:shortcutShortLabel="@string/menu_scan_now"
        android:shortcutDisabledMessage="@string/unable_to_scan">
        <intent
            android:action="android.intent.custom.scan"
            android:targetPackage="seng440.vaccinepassport"
            android:targetClass="seng440.vaccinepassport.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>
    <shortcut
        android:shortcutId="show_latest"
        android:enabled="true"
        android:icon="@drawable/icon_identity"
        android:shortcutShortLabel="@string/shortcut_latest"
        android:shortcutDisabledMessage="@string/no_pass_shortcut">
        <intent
            android:action="android.intent.custom.show_latest"
            android:targetPackage="seng440.vaccinepassport"
            android:targetClass="seng440.vaccinepassport.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
</shortcuts>